Fix heading line spacing

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 :root {
   --text: #fff;
-  --text-dim: #888;
+  --text-dim: #999;
   --bg: #111;
   --space-xs: 0.25rem;
   --space-sm: 0.5rem;
